--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,7 +1,10 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+bcrypt==4.2.1
 certifi==2024.8.30
+cffi==1.17.1
 click==8.1.7
+cryptography==44.0.0
 dnspython==1.16.0
 email_validator==2.2.0
 fastapi==0.115.5
@@ -15,16 +18,22 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mongoengine==0.29.1
+pycparser==2.22
 pydantic==2.10.2
 pydantic_core==2.27.1
 Pygments==2.18.0
+PyJWT==2.10.1
 pymongo==3.12.0
 python-dotenv==1.0.1
+python-http-client==3.3.7
 python-multipart==0.0.17
 PyYAML==6.0.2
 rich==13.9.4
+sendgrid==6.11.0
 shellingham==1.5.4
 sniffio==1.3.1
+starkbank-ecdsa==2.2.0
 starlette==0.41.3
 typer==0.13.1
 typing_extensions==4.12.2
